--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <script>
       alert("JavaScript executed");
     </script> -->
-    <script src="./javascript/if-else.js"></script>
+    <script src="./javascript/switch-case.js"></script>
   </head>
   <body>
     <!-- 1. Inline JavaScript -->
