--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <script>
       alert("JavaScript executed");
     </script> -->
-    <script src="./javascript/functions.js"></script>
+    <script src="./javascript/array-methods.js"></script>
   </head>
   <body>
     <!-- 1. Inline JavaScript -->
