learn: introduction to DOM API

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,20 +7,23 @@
     <!-- <script>
       alert("JavaScript executed");
     </script> -->
-    <script src="./javascript/array-methods.js"></script>
   </head>
   <body>
     <!-- 1. Inline JavaScript -->
     <!-- <button onclick="alert('Buttun clicked!')">Click me!</button> -->
 
     <!-- 2. Internal JavaScript -->
-    <h2>Learn JavaScript</h2>
-    <h3>Values and varibales</h3>
+    <h2 id="learn">Learn JavaScript</h2>
+    <h3 class="title">Values and varibales</h3>
+    <h2 class="title">Simple title</h2>
 
     <!-- 3. Externel JS -->
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod delectus
       error eveniet?
     </p>
+
+    <!--  -->
+    <script src="./javascript/dom-elements.js"></script>
   </body>
 </html>
