--- a/index.html
+++ b/index.html
@@ -14,16 +14,28 @@
 
     <!-- 2. Internal JavaScript -->
     <h2 id="learn">Learn JavaScript</h2>
-    <h3 class="title">Values and varibales</h3>
+    <h3 class="title" id="heading3" style="background-color: darkblue">
+      Values and varibales
+    </h3>
     <h2 class="title">Simple title</h2>
 
     <!-- 3. Externel JS -->
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod delectus
-      error eveniet?
-    </p>
+    <div class="box">
+      <p id="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod delectus
+        error eveniet?
+      </p>
+    </div>
+
+    <img
+      src="./images/screen1.png"
+      alt="Screenshot 1"
+      width="200"
+      height="200"
+      id="image"
+    />
 
     <!--  -->
-    <script src="./javascript/dom-elements.js"></script>
+    <script src="./javascript/dom.js"></script>
   </body>
 </html>
