learn: mini project

--- a/index.html
+++ b/index.html
@@ -3,39 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learn JavaScript</title>
-    <!-- <script>
-      alert("JavaScript executed");
-    </script> -->
+    <title>Mini Project</title>
   </head>
   <body>
-    <!-- 1. Inline JavaScript -->
-    <!-- <button onclick="alert('Buttun clicked!')">Click me!</button> -->
-
-    <!-- 2. Internal JavaScript -->
-    <h2 id="learn">Learn JavaScript</h2>
-    <h3 class="title" id="heading3" style="background-color: darkblue">
-      Values and varibales
-    </h3>
-    <h2 class="title">Simple title</h2>
-
-    <!-- 3. Externel JS -->
-    <div class="box">
-      <p id="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod delectus
-        error eveniet?
-      </p>
+    <div class="wrapper">
+      <h1>Asabeneh Yetayeh challenges in <span id="year">2020</span></h1>
+      <h2>30DaysOfJavaScript Challenge</h2>
+      <ul>
+        <li>30DaysOfPython Challenge Done</li>
+        <li>30DaysOfJavaScript Challenge Ongoing</li>
+        <li>30DaysOfReact Challenge Coming</li>
+        <li>30DaysOfFullStack Challenge Coming</li>
+        <li>30DaysOfDataAnalysis Challenge Coming</li>
+        <li>30DaysOfReactNative Challenge Coming</li>
+        <li>30DaysOfMachineLearning Challenge Coming</li>
+        <li>30DaysOfPython Challenge Done</li>
+        <li>30DaysOfJavaScript Challenge Canceled</li>
+      </ul>
     </div>
 
-    <img
-      src="./images/screen1.png"
-      alt="Screenshot 1"
-      width="200"
-      height="200"
-      id="image"
-    />
-
-    <!--  -->
-    <script src="./javascript/dom.js"></script>
+    <!-- JS -->
+    <script src="./javascript/mini-project1.js"></script>
   </body>
 </html>
