learn: dom mini-project1

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini Project</title>
+    <title>JavaScript for Everyone:DOM</title>
   </head>
   <body>
     <div class="wrapper">
       <h1>Asabeneh Yetayeh challenges in <span id="year">2020</span></h1>
       <h2>30DaysOfJavaScript Challenge</h2>
+      <div id="datetime">Current Date and Time</div>
       <ul>
         <li>30DaysOfPython Challenge Done</li>
         <li>30DaysOfJavaScript Challenge Ongoing</li>
