--- a/events.html
+++ b/events.html
@@ -11,6 +11,10 @@
 
     <button id="btn">Click me 2</button>
 
+    <h1>Giving feedback using blur event</h1>
+    <input type="text" id="mass" placeholder="say something" />
+    <p></p>
+
     <!-- js -->
     <script src="/javascript/event-listener.js"></script>
   </body>
